--- a/src/App.less
+++ b/src/App.less
@@ -44,5 +44,11 @@ html, body {
       background-color: red;
       transition: 0.25s ease-in-out;
     }
+
+    &.alert {
+      color: white;
+      background-color: purple;
+      transition: 0.25s ease-in-out;
+    }
   }
 }
