--- a/src/App.less
+++ b/src/App.less
@@ -27,6 +27,8 @@ html, body {
     padding: 12px;
     background-color: lightgreen;
     transition: 0.25s ease-in-out;
+    border-radius: 5px;
+    border: none;
 
     &:hover {
       transition: 0.25s ease-in-out;
